# pandas-ai

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINALIZATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  SECURITY.md  SHIPPING_CHECKLIST.md  compare_agents_charts.py  compare_agents_extensive.py  docker-compose.cloud-test.yml  mkdocs.yml  pyproject.toml  requirements.txt
data/generators/: sample_data.py
data/use_cases/: README.md  analytics.csv  ecommerce.csv  energy.csv  health.csv  sales.csv  stocks.csv  weather.csv
docs/: MODES_CHEATSHEET.md  MULTI_PROVIDER_GUIDE.md  api_reference.md  getting-started.md  index.md  installation.md  migration.md
examples/: __init__.py  advanced_features_demo.py  basic_examples.py  client_agent.py  llm_chart_examples.py  pychartai_style_examples.py
src/: __init__.py
src/pychartai/: __init__.py
src/pychartai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pychartai_core/: __init__.py  agent.py  analyzer.py  api.py  cache.py  cloud_connectors.py  config.py  connections.py  data_manager.py  db_connectors.py  error_hints.py  io.py  logging.py  memory.py  model_manager.py  pipeline.py  profiler.py  providers.py  redactor.py  reporter.py  sandbox.py  schema.py  skills.py  smart_df.py  streaming.py  themes.py  visualization.py
src/pychartai_core/visualization_backends/: __init__.py  base.py  catalog.py  matplotlib_backend.py  plotly_backend.py  seaborn_backend.py  utils.py
tests/: smoke_examples.py  test_chartai_api.py  test_charts.py  test_cloud_connectors.py  test_db_connectors.py  test_docker_sandbox.py  test_error_hints.py  test_features.py  test_integration_extensive.py  test_memory.py  test_new_features.py  test_profiler.py  test_pychartai_agent.py  test_query_validation.py  test_redactor.py  test_sandbox.py  test_smart_df_features.py  test_streaming.py  test_themes.py
tests/integration/: test_cloud_integration.py
